# Hadron

./: .gitignore  .gitmodules  CabbageStatesEditor_readme.txt  Hadron.orc  Hadron.sco  HadronCabbage.csd  HadronCabbageEditor.csd  Hadron_Csound_Standalone.csd  Hadron_FLTK_midi.csd  analyzeSoundfiles.csd  analyzeSoundfiles.orc  analyzeSoundfiles.py  analyzeSoundfiles.sco  analyzeSoundfiles1.inc  analyzeSoundfiles_scoreWriter.py  checkAllForRelease.py  checkBetaToRepo.py  checkInstallerDate.py  checkStatesDocumentation.py  comLine.py  constants.py  currentEdits.epp  debug_output.txt  default_preset.table  editor_gui_codeUtility.py  fixMaskFilesFormatting.py  hadron_cs_standalone_sco.inc  historyfile.txt  licence.txt  licence_HadronParticleSynthesizer.txt  licence_States.txt  main.py  modMatrixMap.py  modmatrixhelp.txt  notes_Csound6.txt  parameterlist.inc  readme.txt  readme_standalone.txt  tablehelp.txt  temp.orc  (+9 more)
MFL/: Hadron for Live notes.txt
VST-AU/: CMakeLists.txt  CMakePresets.json  Hadron.jucer
VST-AU/10_5_build/Hadron.component/Contents/: Info.plist
VST-AU/10_5_build/Hadron.component/Contents/Resources/: Hadron.rsrc
VST-AU/Builds/MacOSX/: Info-AU.plist  Info-VST.plist  hadron_vst.config
VST-AU/Builds/MacOSX/Hadron.xcodeproj/: project.pbxproj  project.pbxproj.orig
VST-AU/Builds/win-x64/: Hadron.vcxproj  Hadron.vcxproj.filters  Hadron_SharedCode.vcxproj  Hadron_SharedCode.vcxproj.filters  Hadron_VST.vcxproj  Hadron_VST.vcxproj.filters  resources.rc
VST-AU/Builds/win-x86/: Hadron_SharedCode.vcxproj  Hadron_VST.vcxproj
VST-AU/Hadron.component/Contents/: Info.plist
VST-AU/Hadron.component/Contents/Resources/: Hadron.rsrc
VST-AU/Hadron.component/Contents/Resources/CsoundLib64.framework/Versions/6.0/Headers/: csound_standard_types.h  float-version.h
VST-AU/Hadron.vst/Contents/: Info.plist
VST-AU/JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
VST-AU/JuceLibraryCode/modules/juce_audio_formats/: juce_audio_formats.h
VST-AU/JuceLibraryCode/modules/juce_audio_formats/codecs/: juce_AiffAudioFormat.cpp  juce_FlacAudioFormat.cpp  juce_WavAudioFormat.cpp  juce_WindowsMediaAudioFormat.cpp
VST-AU/JuceLibraryCode/modules/juce_audio_formats/format/: juce_AudioSubsectionReader.cpp  juce_BufferingAudioFormatReader.cpp
VST-AU/JuceLibraryCode/modules/juce_audio_plugin_client/: juce_audio_plugin_client.h  juce_audio_plugin_client_AAX.cpp  juce_audio_plugin_client_AAX_utils.cpp  juce_audio_plugin_client_AU_1.mm  juce_audio_plugin_client_LV2.cpp  juce_audio_plugin_client_VST3.cpp
VST-AU/JuceLibraryCode/modules/juce_audio_plugin_client/detail/: juce_LinuxMessageThread.h
VST-AU/JuceLibraryCode/modules/juce_audio_processors/: juce_audio_processors.cpp  juce_audio_processors.h
VST-AU/JuceLibraryCode/modules/juce_audio_processors/format_types/: juce_AudioUnitPluginFormat.mm  juce_LV2PluginFormat.cpp  juce_VST3Common.h  juce_VST3PluginFormat.cpp  juce_VST3PluginFormat_test.cpp
VST-AU/JuceLibraryCode/modules/juce_audio_processors/processors/: juce_AudioProcessor.cpp  juce_AudioProcessorGraph.cpp  juce_AudioProcessorGraph.h
VST-AU/JuceLibraryCode/modules/juce_audio_processors/scanning/: juce_PluginListComponent.cpp
VST-AU/JuceLibraryCode/modules/juce_audio_processors/utilities/: juce_FlagCache.h
VST-AU/JuceLibraryCode/modules/juce_audio_processors/utilities/ARA/: juce_ARADocumentController.cpp
VST-AU/JuceLibraryCode/modules/juce_graphics/: juce_graphics.h
VST-AU/JuceLibraryCode/modules/juce_graphics/native/: juce_CoreGraphicsContext_mac.mm
VST-AU/JuceLibraryCode/modules/juce_gui_basics/: juce_gui_basics.h
VST-AU/JuceLibraryCode/modules/juce_gui_basics/native/: juce_Windowing_windows.cpp
VST-AU/JuceLibraryCode/modules/juce_gui_basics/widgets/: juce_TreeView.cpp
VST-AU/JuceLibraryCode/modules/juce_gui_extra/: juce_gui_extra.h
VST-AU/JuceLibraryCode/modules/juce_gui_extra/native/: juce_ActiveXComponent_windows.cpp  juce_PushNotifications_android.cpp  juce_PushNotifications_ios.cpp  juce_PushNotifications_mac.cpp  juce_WebBrowserComponent_windows.cpp
VST-AU/Source/: CSoundInterface.cpp  CSoundInterface.h  Hadron.cpp  HadronPlugin.cpp  HadronPlugin.h  HadronProgram.h  PluginParameter.h
VST-AU/Source/GUI/: HadronComboBox.cpp  HadronComboBox.h  HadronComponent.cpp  HadronComponent.h  HadronLabel.cpp  HadronLabel.h  HadronMeter.h  HadronPad.cpp  HadronPad.h  ImageData.h  LnF_Hadron_Component.cpp  LnF_Hadron_Component.h
VST-AU/src/: CMakeLists.txt  CSoundInterface.h  Hadron.h  HadronPlugin.h  HadronProgram.cpp  HadronProgram.h
VST-AU/src/GUI/: CMakeLists.txt  HadronComboBox.h  HadronComponent.h  HadronLabel.cpp  HadronLabel.h  HadronMeter.cpp  HadronMeter.h  HadronPad.h  ImageData.cpp  LnF_Hadron_Component.cpp  LnF_Hadron_Component.h
cs/: __init__.py  csMessages.py  csModule.py
docs/: category_index_effects.html  category_index_grainrate.html  category_index_graintranspose.html  category_index_triggeredeffects.html  faq.html  index.html  index_states.html  state_fxGrainFlanger.htm  state_fxGrainFlanger2.htm  state_fxGroctaver.htm  state_fxLowpassRand.htm  state_fxTwinPeaks.htm  state_grBandpassAnimator1.htm  state_grBlackBells.htm  state_grCartoonVocals.htm  state_grFilterSynth.htm  state_grReedyFormantStepSync.htm  state_grReedyOctEfx.htm  state_grReedyThinAnalog.htm  state_grReedyThinBadRadio.htm  state_grTrainletDistribution.htm  state_grTrainletFM1Randmask.htm  state_grTrainletRandmask.htm  state_grTrombone.htm  state_gt16thsStagger.htm  state_gtLivesampling1.htm  state_gtParticleCloud.htm  state_gtPitchTimeAndMix.htm  state_gtSamplePlayback.htm  state_gtSnapper.htm  state_gtSnapperRhythm.htm  state_tfxHarmonyFM.htm  state_tfxPitchModFMEcho.htm  state_tfxRisingSmoke.htm  state_tfxVoicePitcher.htm  states_design_advice.txt  writeStatesDocumentation.py  writeStatesDocumentation_win.py
func_files/: FMratio_steps.txt  Groctaver_Func_notes.txt  SnapperRhythm1.func  SnapperRhythm1a.func  SnapperRhythm2.func  SnapperRhythm3.func  SnapperRhythm4.func  SnapperRhythm_Func_notes.txt  Stutter_Func_notes.txt  (+21 more)
(+1125 files in other folders)
